--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,3 +1,9 @@
+$font-stack:    Helvetica, sans-serif;
+$primary-color: #333;
+$background-color: #DDEEFF;
+
 body {
-  background-color: red;
+  font: 100% $font-stack;
+  color: $primary-color;
+  background-color: $background-color;
 }
